Fix overflow for mobile.

--- a/styles.css
+++ b/styles.css
@@ -55,7 +55,7 @@ body {
   align-items: center;
   min-height: 100vh;
   padding: 1rem;
-  overflow: hidden;
+  overflow: auto;
 }
 
 .container {
